@@ -1,243 +1,243 @@
 #Check gradient at x = -10
 # Good
 #[1](-20)
-#[1](-19.9999)
+#[1](-20)
 # Bad
 #[1](-8)
-#[1](-19.9999)
+#[1](-20)
 # Circle
 #[1](-0.839072)
-#[1](-0.839099)
+#[1](-0.839072)
 #[1](-0.544021)
-#[1](-0.543979)
+#[1](-0.544021)
 #Check gradient at x = -9
 # Good
 #[1](-18)
-#[1](-17.9999)
+#[1](-18)
 # Bad
 #[1](-3)
-#[1](-17.9999)
+#[1](-18)
 # Circle
 #[1](-0.91113)
-#[1](-0.91111)
+#[1](-0.91113)
 #[1](0.412118)
-#[1](0.412164)
+#[1](0.412119)
 #Check gradient at x = -8
 # Good
 #[1](-16)
-#[1](-15.9999)
+#[1](-16)
 # Bad
 #[1](2)
-#[1](-15.9999)
+#[1](-16)
 # Circle
 #[1](-0.1455)
-#[1](-0.145451)
+#[1](-0.1455)
 #[1](0.989358)
-#[1](0.989366)
+#[1](0.989358)
 #Check gradient at x = -7
 # Good
 #[1](-14)
-#[1](-13.9999)
+#[1](-14)
 # Bad
 #[1](7)
-#[1](-13.9999)
+#[1](-14)
 # Circle
 #[1](0.753902)
-#[1](0.753935)
+#[1](0.753902)
 #[1](0.656987)
-#[1](0.656949)
+#[1](0.656987)
 #Check gradient at x = -6
 # Good
 #[1](-12)
-#[1](-11.9999)
+#[1](-12)
 # Bad
 #[1](12)
-#[1](-11.9999)
+#[1](-12)
 # Circle
 #[1](0.96017)
-#[1](0.960156)
+#[1](0.96017)
 #[1](-0.279415)
-#[1](-0.279464)
+#[1](-0.279415)
 #Check gradient at x = -5
 # Good
 #[1](-10)
-#[1](-9.9999)
+#[1](-10)
 # Bad
 #[1](17)
-#[1](-9.9999)
+#[1](-10)
 # Circle
 #[1](0.283662)
-#[1](0.283614)
+#[1](0.283662)
 #[1](-0.958924)
-#[1](-0.958938)
+#[1](-0.958924)
 #Check gradient at x = -4
 # Good
 #[1](-8)
-#[1](-7.9999)
+#[1](-8)
 # Bad
 #[1](22)
-#[1](-7.9999)
+#[1](-8)
 # Circle
 #[1](-0.653644)
-#[1](-0.653681)
+#[1](-0.653644)
 #[1](-0.756802)
-#[1](-0.75677)
+#[1](-0.756802)
 #Check gradient at x = -3
 # Good
 #[1](-6)
-#[1](-5.9999)
+#[1](-6)
 # Bad
 #[1](27)
-#[1](-5.9999)
+#[1](-6)
 # Circle
 #[1](-0.989992)
-#[1](-0.989985)
+#[1](-0.989992)
 #[1](0.14112)
-#[1](0.14117)
+#[1](0.14112)
 #Check gradient at x = -2
 # Good
 #[1](-4)
-#[1](-3.9999)
+#[1](-4)
 # Bad
 #[1](32)
-#[1](-3.9999)
+#[1](-4)
 # Circle
 #[1](-0.416147)
-#[1](-0.416101)
+#[1](-0.416147)
 #[1](0.909297)
-#[1](0.909318)
+#[1](0.909297)
 #Check gradient at x = -1
 # Good
 #[1](-2)
-#[1](-1.9999)
+#[1](-2)
 # Bad
 #[1](37)
-#[1](-1.9999)
+#[1](-2)
 # Circle
 #[1](0.540302)
-#[1](0.540344)
+#[1](0.540302)
 #[1](0.841471)
-#[1](0.841444)
+#[1](0.841471)
 #Check gradient at x = 0
 # Good
 #[1](0)
-#[1](0.0001)
+#[1](1e-08)
 # Bad
 #[1](42)
-#[1](0.0001)
+#[1](1e-08)
 # Circle
 #[1](1)
 #[1](1)
 #[1](-0)
-#[1](-5e-05)
+#[1](0)
 #Check gradient at x = 1
 # Good
 #[1](2)
-#[1](2.0001)
+#[1](2)
 # Bad
 #[1](47)
-#[1](2.0001)
+#[1](2)
 # Circle
 #[1](0.540302)
-#[1](0.54026)
+#[1](0.540302)
 #[1](-0.841471)
-#[1](-0.841498)
+#[1](-0.841471)
 #Check gradient at x = 2
 # Good
 #[1](4)
-#[1](4.0001)
+#[1](4)
 # Bad
 #[1](52)
-#[1](4.0001)
+#[1](4)
 # Circle
 #[1](-0.416147)
-#[1](-0.416192)
+#[1](-0.416147)
 #[1](-0.909297)
-#[1](-0.909277)
+#[1](-0.909297)
 #Check gradient at x = 3
 # Good
 #[1](6)
-#[1](6.0001)
+#[1](6)
 # Bad
 #[1](57)
-#[1](6.0001)
+#[1](6)
 # Circle
 #[1](-0.989992)
-#[1](-0.99)
+#[1](-0.989992)
 #[1](-0.14112)
-#[1](-0.141071)
+#[1](-0.14112)
 #Check gradient at x = 4
 # Good
 #[1](8)
-#[1](8.0001)
+#[1](8)
 # Bad
 #[1](62)
-#[1](8.0001)
+#[1](8)
 # Circle
 #[1](-0.653644)
-#[1](-0.653606)
+#[1](-0.653644)
 #[1](0.756802)
-#[1](0.756835)
+#[1](0.756802)
 #Check gradient at x = 5
 # Good
 #[1](10)
-#[1](10.0001)
+#[1](10)
 # Bad
 #[1](67)
-#[1](10.0001)
+#[1](10)
 # Circle
 #[1](0.283662)
-#[1](0.28371)
+#[1](0.283662)
 #[1](0.958924)
-#[1](0.95891)
+#[1](0.958924)
 #Check gradient at x = 6
 # Good
 #[1](12)
-#[1](12.0001)
+#[1](12)
 # Bad
 #[1](72)
-#[1](12.0001)
+#[1](12)
 # Circle
 #[1](0.96017)
-#[1](0.960184)
+#[1](0.96017)
 #[1](0.279415)
-#[1](0.279367)
+#[1](0.279416)
 #Check gradient at x = 7
 # Good
 #[1](14)
-#[1](14.0001)
+#[1](14)
 # Bad
 #[1](77)
-#[1](14.0001)
+#[1](14)
 # Circle
 #[1](0.753902)
-#[1](0.753869)
+#[1](0.753902)
 #[1](-0.656987)
-#[1](-0.657024)
+#[1](-0.656987)
 #Check gradient at x = 8
 # Good
 #[1](16)
-#[1](16.0001)
+#[1](16)
 # Bad
 #[1](82)
-#[1](16.0001)
+#[1](16)
 # Circle
 #[1](-0.1455)
-#[1](-0.14555)
+#[1](-0.1455)
 #[1](-0.989358)
-#[1](-0.989351)
+#[1](-0.989358)
 #Check gradient at x = 9
 # Good
 #[1](18)
-#[1](18.0001)
+#[1](18)
 # Bad
 #[1](87)
-#[1](18.0001)
+#[1](18)
 # Circle
 #[1](-0.91113)
-#[1](-0.911151)
+#[1](-0.91113)
 #[1](-0.412118)
-#[1](-0.412073)
+#[1](-0.412119)
 # Times at x = [2](-10,-10)
 #[2](-10,-10)
 #[2](-10,-10)
