@@ -1,3 +1,14 @@
+2009-07-23  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Enhance finite difference gradient computaton.
+	* include/roboptim/core/finite-difference-gradient.hh:
+	Add missing const in checkGradient signature, fix default
+	epsilon and threshold.
+	* src/finite-difference-gradient.cc: Remove useless
+	test in finite difference gradient computation, be
+	more strict about allowed epsilon values.
+	* tests/finite-difference-gradient.stdout: Regenerate.
+
 2009-07-15  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Display function's names in Gnuplot.
